@@ -1,3 +1,8 @@
+2023-02-24 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/_minimal.c:
+	  Pick minimal regression test from MP8 fork of sdcc to ease initial debuggng of new ports.
+
 2023-02-20 Felix Salfelder <felix AT salfelder.org>
 
 	* Makefile.in:
